# nbo-package

./: .gitignore  COMPLETE_FUNCTIONALITY.md  DISTRIBUTION_GUIDE.md  END_USER_GUIDE.md  INSTALLATION.md  MANIFEST.in  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  USER_WORKFLOW.md  _config.yml  index.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml
config/: database_schema_v1.1.json
data/: dbo.candidate_offers_v2.csv  dbo.decision_log_v1.csv  dbo.dim_store.csv  dbo.fact_order.csv  dbo.feature_mart.csv  dbo.geo_guest_market_v1.csv  dbo.guardrail_config.csv  dbo.label_set.csv  dbo.last_visit.csv  dbo.model_scores_v1.csv  dbo.modeling_set_v2.csv  dbo.offer_catalog_v1.csv  dbo.pilot_transactions_v1.csv  dbo.policy_overrides.csv  dbo.promotions.csv  dbo.stg_campaign_influenced_transactions.csv  dbo.stg_kl_fact_campaigns.csv  dbo.stg_kl_fact_redemptions.csv  dbo.stg_kl_fact_web_visits.csv  dbo.stg_kl_loyalty_transactions.csv  dbo.stg_kl_loyalty_transactions_agg.csv  dbo.stg_touch_history.csv  dbo.v_calendar.csv  dbo.v_decision_export_marketing_v1.csv  dbo.v_fatigue_72h_v1.csv  dbo.v_nbo_rollup_offer_v1.csv  dbo.v_nbo_rollup_segment_v1.csv  dbo.v_panel.csv  dbo.v_redeem_detail.csv  dbo.v_season.csv  dbo.v_segment.csv
docs/: COMPLETE_FUNCTIONALITY.md  DISTRIBUTION_GUIDE.md  END_USER_GUIDE.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  USER_WORKFLOW.md  _config.yml  index.md  package-docs.md  project-resources.md
docs/_includes/: footer.html  head.html
docs/_layouts/: default.html
nbo/: __init__.py  _version.py  catalog_guardrails.py  cli.py  configuration.py  contract_checks.py  data_loader.py  fatigue_candidates.py  guardrails_winners.py  model_training.py  pipeline.py  povenance.py  shap.py  test_marketing_view.py  user_setup.py  validation.py
nbo/config/: __init__.py  settings.json
tests/: __init__.py  conftest.py  test_basic.py
